--- a/client/trucks/findtrucks.html
+++ b/client/trucks/findtrucks.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Food Truck Finder</title>
-</head>
-<body>
-
-</body>
-</html>
+<p>findtrucks</p>
