--- a/client/trucks/findtrucks.html
+++ b/client/trucks/findtrucks.html
@@ -1,1 +1,6 @@
-<p>findtrucks</p>
+
+<div ng-cntroller="findtrucks">
+
+	<button ng-click="getGeoLocation(); getNearbyTrucks()">Find Nearby Trucks!
+	</button>
+</div>
