--- a/client/trucks/findtrucks.html
+++ b/client/trucks/findtrucks.html
@@ -1,6 +1,10 @@
 
-<div ng-cntroller="findtrucks">
+<div ng-cntroller="FindtrucksController">
 
-	<button ng-click="getGeoLocation(); getNearbyTrucks()">Find Nearby Trucks!
+	<button ng-click="getTrucks()">Find Nearby Trucks!
 	</button>
+	</br>
+
+
 </div>
+
