--- a/client/trucks/findtrucks.html
+++ b/client/trucks/findtrucks.html
@@ -4,7 +4,11 @@
 	<button ng-click="getTrucks()">Find Nearby Trucks!
 	</button>
 	</br>
-
+	
+	<ul>
+		<li ng-repeat="truck in trucks"><img src="{{truck.image}}" style="height:140px"></br>{{truck.name}}</br>{{truck.cuisine}}</br>{{truck.currentAddress}}</br>{{truck.distance}} miles from you!</br></li>
+	</ul>
+	
 
 </div>
 
