[Progress] progres made to profile page

--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,16 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html ng-app='finder'>
 <head>
 	<title>Food Truck Finder</title>
 </head>
+<script src="bower_components/bootstrap/dist/css/"></script>
+
 <body>
-	<h1>Food Truck Finder</h1>
-    <div ui-view></div>
+
+<div ui-view></div>
 
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-
 <script src="auth/auth.controller.js"></script>
 <script src="services/auth.service.js"></script>
 <script src="services/profiledata.service.js"></script>
