--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1,5 +1,5 @@
+<header ng-include="'layout/navprofile.html'"></header>
 
+<button ng-click="getProfile()">Get profile</button>
 
-<p>profile</p>
-<button ng-click="logout()">Log Out</button>
 
