[Style] Added styles

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html ng-app='finder'>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
 	<title>Food Truck Finder</title>
+  <link rel="stylesheet" href="/css/bootstrap.min.css" />
+<!--  <link rel="stylesheet" href="bower_components/material-design-lite/material.min.css">
+  <script src="bower_components/material-design-lite/material.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
 </head>
-<script src="bower_components/bootstrap/dist/css/"></script>
 
 <body>
 
@@ -22,3 +28,4 @@
 
 </body>
 </html>
+
