--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1,5 +1,7 @@
 <header ng-include="'layout/navprofile.html'"></header>
 
-<button ng-click="getProfile()">Get profile</button>
+
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" ng-click = "getProfile()"> Go
+</button>
 
 
