--- a/client/trucks/findtrucks.html
+++ b/client/trucks/findtrucks.html
@@ -1,9 +1,17 @@
 <header ng-include="'layout/navtrucks.html '"></header>
 
-<div ng-cntroller="FindtrucksController">
+<div id="map_canvas">
+  <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options">
+    <ui-gmap-markers models="Markers" coords="'self'" icon="icon">
+    </ui-gmap-markers>
+    <ui-gmap-circle ng-repeat="c in circles track by c.id" center="c.center" stroke="c.stroke" fill="c.fill" radius="c.radius"
+        visible="c.visible" geodesic="c.geodesic" clickable="c.clickable" control="c.control">
+    </ui-gmap-circle>
+  </ui-gmap-google-map>
+</div>
 
-	<button ng-click="getTrucks()">Find Nearby Trucks!
-	</button>
+<div ng-cntroller="FindtrucksController" ng-init="getTrucks()">
+
 	</br>
 	
 	<ul>
