[Add] added styles folder with bootstrap and google maps css

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html ng-app='finder'>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="styles/style.css">
+<link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
+
 	<title>Food Truck Finder</title>
 </head>
 <script src="bower_components/bootstrap/dist/css/"></script>
