[Style] Added css global.css file and angular material to project, styled menu bar, and working on card layout for trucklist

--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1,5 +1,5 @@
-<!-- <div ng-include="'layout/navprofile.html'"></div> -->
 
+<header ng-include="'layout/navprofile.html '"></header>
 
 <div id="profile">
 	<p>
