--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html ng-app='finder'>
 <head>
-<link rel="stylesheet" type="text/css" href="styles/style.css">
+<title>Food Truck Finder</title>
+
+<!--StyleSheets-->
+<link rel="stylesheet" type="text/css" href="styles/maps.style.css">
+<link rel="stylesheet" type="text/css" href="styles/global.style.css">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
 
-	<title>Food Truck Finder</title>
+<link href="./bower_components/angular-material/angular-material.css" rel="stylesheet" />
+
+
 </head>
-<script src="bower_components/bootstrap/dist/css/"></script>
 
 <body>
 
 <div ui-view></div>
-
-<script src="bower_components/lodash/lodash.js"></script>
+<!--Angular Dependencies-->
 <script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<!--Google Map Dependencies-->
+<script src="bower_components/lodash/lodash.js"></script>
 <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
 <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
 <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
-<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<!--Angular Material Dependencies-->
+<script src="./bower_components/angular-animate/angular-animate.js" type="text/javascript" ></script>
+<script src="./bower_components/angular-aria/angular-aria.js" type="text/javascript" ></script>
+<script src="./bower_components/angular-material/angular-material.js" type="text/javascript" ></script>
 
+
+<!--Controllers-->
 <script src="auth/auth.controller.js"></script>
 <script src="services/auth.service.js"></script>
 <script src="services/profiledata.service.js"></script>
