[Style] Almost done styling home page

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 
 <!--StyleSheets-->
 <link rel="stylesheet" type="text/css" href="styles/maps.style.css">
+<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="styles/global.style.css">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
 
