--- a/client/trucks/findtrucks.html
+++ b/client/trucks/findtrucks.html
@@ -3,7 +3,7 @@
 <div>
 <md-toolbar layout="row" class="md-whiteframe-z3" style="padding:0px;margin:0px;">
   <h2 style="padding-left:10px">Food Truck Finder</h2>
-  <a style="padding-left:550px;color:#fff; padding-top:20px"><ui-sref= "signin"> SIGN IN</a>
+  <a style="padding-left:550px;color:#fff; padding-top:20px" ui-sref= "signin"> SIGN IN</a>
   </md-toolbar>`
 </div>
 	<div layout layout-wrap layout-sm="column" layout-xs="column" style="min-height:100vh" layout-align="center" >
