[progress] working on edit profile page

--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
 <script src="services/profiledata.service.js"></script>
 <script src="services/truckdata.service.js"></script>
 <script src="profile/profile.controller.js"></script>
+<script src="profile/editProfile.controller.js"></script>
 <script src="trucks/findtrucks.controller.js"></script>
 <script src="map/map.controller.js"></script>
 <script src="app.js"></script>
