--- a/client/profile/editProfile.html
+++ b/client/profile/editProfile.html
@@ -1,5 +1,5 @@
 <div style="width: 80%; margin: auto">
-	<md-content>
+	<md-content layout-padding>
 		<h2>Edit Your Profile</h2>
 	</md-content>
 	<div layout="column" ng-cloak class="md-inline-form">
@@ -29,7 +29,41 @@
 	      </form>
 	    </div>
 		</md-content> 
-		<md-button>Add a business location and working hours</md-button>
+
+		<div layout-padding>
+			<h4>Tell us your locations and hours, so people can find your turck!</h4>
+			<md-button ng-show="!addLocation" ng-click="addLocation = ! addLocation">Add Location</md-button>
+			<!-- add location box -->
+			<div ng-if="addLocation">
+				<md-input-container class="md-block">
+				  <label>Address</label>
+				  <input ng-model="address">
+				</md-input-container>
+				<!-- add hours -->
+				<div layout-gt-xs="rows">
+					<span style="padding-right: 20px">Mon:</span>
+					<md-input-container>
+	        	<label>start</label>
+	        <md-select ng-model="start1">
+	          <md-option ng-repeat="time in timeList" value="{{time}}">
+		            {{time}}
+		          </md-option>
+		        </md-select>
+					</md-input-container>
+					<md-input-container>
+		      <label>end</label>
+		        <md-select ng-model="end1">
+		          <md-option ng-repeat="time in timeList" value="{{time}}">
+		            {{time}}
+		          </md-option>
+		        </md-select>
+					</md-input-container>
+					<md-button ng-click="editLocation()">Add Location</md-button>
+					<md-button ng-click="cancelEditLocation()">Cancel</md-button>	
+				</div> <!--end hours -->
+			</div> <!-- end location box -->
+		</div>
+		<!-- <md-button>Add a business location and working hours</md-button> -->
 	</div>
 </div>
 	        <!-- <md-input-container class="md-block">
