[progress] editProfile add hours

--- a/client/profile/editProfile.html
+++ b/client/profile/editProfile.html
@@ -38,6 +38,7 @@
 				<md-input-container class="md-block">
 				  <label>Address</label>
 				  <input ng-model="address">
+				  <div>{{address}}</div>
 				</md-input-container>
 				<!-- add hours -->
 				<div layout-gt-xs="rows">
